# folsum

./: .gitattributes  .gitignore  .gitmodules  .rust-analyzer.toml  Cargo.toml  LICENSE.md  README.md  build.rs  folsum-15284fb17fcaf0dd.js  folsum-15284fb17fcaf0dd_bg.wasm  folsum-87f7aa0cac752908.js  folsum-87f7aa0cac752908_bg.wasm  index.html  test_helpers.rs
.github/ISSUE_TEMPLATE/: todo-item.md
.github/workflows/: build_binaries.yml  build_macos.yml  build_test.yml  pages.yml  semver_test.yml
docs/: directory_summarizer_bg.wasm  index.html
folsum/: .gitignore  Cargo.toml  egui_README.md  generate_testfiles.bash  index.html  run_and_save_benchmarks.zsh  save_benchmarks.zsh  trunk.toml
folsum/assets/: CNAME  sw.js
folsum/benches/: benchmark_directory_summarization.rs
folsum/benchmarks/25-03-12_historical_benchmark/benchmark_directory_summarization/base/: benchmark.json  estimates.json
folsum/benchmarks/25-03-12_historical_benchmark/benchmark_directory_summarization/change/: estimates.json
folsum/benchmarks/25-03-12_historical_benchmark/benchmark_directory_summarization/new/: estimates.json  sample.json  tukey.json
folsum/benchmarks/25-03-12_historical_benchmark/benchmark_directory_summarization/report/: index.html
folsum/benchmarks/25-03-12_historical_benchmark/report/: index.html
folsum/benchmarks/25-04-08_historical_benchmark/benchmark_directory_summarization/base/: estimates.json  sample.json  tukey.json
folsum/benchmarks/25-04-08_historical_benchmark/benchmark_directory_summarization/change/: estimates.json
folsum/benchmarks/25-04-08_historical_benchmark/benchmark_directory_summarization/report/: index.html
folsum/docs/: folsum.js
folsum/images/icons/: resize_icons.zsh
folsum/src/: app.rs  audit.rs  common.rs  export_csv.rs  gui.rs  hashers.rs  inventory.rs  lib.rs  logging.rs  main.rs  mod.rs  summarize.rs  utils.rs  verification.rs
folsum/src/tests/common/: mod.rs
folsum/tests/: integration_test.rs
images/icons/: resize_icons.zsh
src/: app.rs  summarize.rs
xtask/: Cargo.toml
xtask/docker/: package_deb.Dockerfile  package_deb.Dockerfile.template  package_deb.template.Dockerfile  target_aarch64.toml  target_x86_64.toml
xtask/src/: build.rs  main.rs
xtask/website/: README.md  config.toml
xtask/website/content/: _index.md  changelog.md  demo.md
xtask/website/templates/: index.html  macros.html
xtask/website/templates/shortcodes/: app_description.html  embed_wasm.html
