[package]
name = "directory_summarizer"
description = "Summarize the contents of a directory with a GUI"
default-run = "directory_summarizer"
version = "1.3.0"
authors = ["Brooke <12855764+goingforbrooke@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "directory_summarizer"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1.0.147", features = ["derive"] } # You only need this if you want app persistence
walkdir = "2.3.2"
rfd = "0.10.0"
itertools = "0.10.5"
egui_extras = "0.19.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.16"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"


[profile.release]
opt-level = 2 # fast and small wasm


[patch.crates-io]

[package.metadata.bundle]
identifier = "com.bytesluice.directory_summarizer"
copyright = "Copyright (c) Brooke Deuson 2023. All rights reserved."
category = "public.app-category.productivity"

[dev-dependencies]
cargo-bundle = "0.6.0"
cargo-edit = "0.12.0"
