[package]
name = "folsum"
description = "Summarize the contents of a directory with a GUI"
default-run = "folsum"
version = "2.0.3"
authors = ["goingforbrooke <12855764+goingforbrooke@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.77.2"

license = "MIT"
readme = "README.md"
# changelog = ""

homepage = "https://folsum.goingforbrooke.com"
repository = "https://github.com/goingforbrooke/folsum"

[dependencies]
# eGui dependencies.
egui = "0.29.0"
# Enable restoring app state with the "persistence" feature.
eframe = { version = "0.29.0", default-features = true, features = ["persistence"] }
egui_extras = "0.29.0"

anyhow = "1.0.97"
chrono = "0.4"
dirs = "6.0"
fern = { version = "0.7.1", features = ["colored"] }
humantime = "2.1.0"
itertools = "0.14.0"
log = "0.4"
rfd = "0.15.2"
# Serde for app persistence.
serde = { version = "1.0.218", features = ["derive"] }
walkdir = "2.5.0"
web-time = "1.1.0"

# Native builds:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# Cargo Bundle items for macOS distributions.
[package.metadata.bundle]
identifier = "com.bytesluice.folsum"
copyright = "Copyright (c) Brooke Deuson 2025. All rights reserved."
category = "public.app-category.productivity"
#icon = "images/icons/resized_icons/"
icon = ["folsum/images/icons/resized_icons/folsum_icon_128px.png",
        "folsum/images/icons/resized_icons/folsum_icon_128px@2x.png",
        "folsum/images/icons/resized_icons/folsum_icon_16px.png",
        "folsum/images/icons/resized_icons/folsum_icon_16px@2x.png",
        "folsum/images/icons/resized_icons/folsum_icon_256px.png",
        "folsum/images/icons/resized_icons/folsum_icon_256px@2x.png",
        "folsum/images/icons/resized_icons/folsum_icon_32px.png",
        "folsum/images/icons/resized_icons/folsum_icon_32px@2x.png",
        "folsum/images/icons/resized_icons/folsum_icon_512px.png",
        "folsum/images/icons/resized_icons/folsum_icon_512px@2x.png",]

[dev-dependencies]
tempdir = "0.3.7"
