[package]
name = "folsum"
description = "Summarize the contents of a directory with a GUI"
default-run = "folsum"
version = "2.2.1"
authors = ["goingforbrooke <12855764+goingforbrooke@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.77.2"

license = "MIT"
readme = "README.md"
# changelog = ""

homepage = "https://folsum.goingforbrooke.com"
repository = "https://github.com/goingforbrooke/folsum"

[dependencies]
### Web and Native
# eGui dependencies.
egui = "0.31.1"
# Enable restoring app state with the "persistence" feature.
eframe = { version = "0.31.1", default-features = true, features = ["persistence"] }
egui_extras = "0.31.1"

anyhow = "1.0.97"
chrono = "0.4"
dirs = "6.0"
env_logger = "0.11.3"
fern = { version = "0.7.1", features = ["colored"] }
getrandom = "0.3.1"
humantime = "2.1.0"
itertools = "0.14.0"
log = "0.4"
md5 = "0.7.0"
# Random number generation for the browser demo.
rand = "0.9.0"
rfd = "0.15.2"
# Serde for app persistence.
serde = { version = "1.0.218", features = ["derive"] }
# Tempfiles for unit tests and benchmarks. Not in `dev-dependencies` b/c needed for benchmarks.
tempfile = { version = "3.18.0", optional = true }
# Show `tracing` log output in tests. Not in `dev-dependencies` b/c needed for benchmarks.
test-log = { version = "0.2.17", optional = true}
tracing = "0.1.41"
walkdir = "2.5.0"

# Cargo Bundle items for macOS distributions.
[package.metadata.bundle]
identifier = "com.traffickingfreetomorrow.folsum"
copyright = "Copyright (c) Brooke Deuson 2025. All rights reserved."
category = "public.app-category.productivity"
icon = ["folsum/images/icons/resized_icons/folsum_icon_128px.png",
        "folsum/images/icons/resized_icons/folsum_icon_128px@2x.png",
        "folsum/images/icons/resized_icons/folsum_icon_16px.png",
        "folsum/images/icons/resized_icons/folsum_icon_16px@2x.png",
        "folsum/images/icons/resized_icons/folsum_icon_256px.png",
        "folsum/images/icons/resized_icons/folsum_icon_256px@2x.png",
        "folsum/images/icons/resized_icons/folsum_icon_32px.png",
        "folsum/images/icons/resized_icons/folsum_icon_32px@2x.png",
        "folsum/images/icons/resized_icons/folsum_icon_512px.png",
        "folsum/images/icons/resized_icons/folsum_icon_512px@2x.png",]

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions = "1.4.1"

[features]
# Don't compile benchmark code unless we're benchmarking.
bench = ["tempfile", "test-log"]

# Criterion benchmarking (https://bheisler.github.io/criterion.rs/book/getting_started.html).
[[bench]]
name = "benchmark_directory_summarization"
harness = false
